--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -268,7 +268,7 @@
 
 								<p>Lowell, Percival. <a href="https://archive.org/details/chosnlandmornin00lowegoog/"><em>Chosön, the Land of the Morning Calm; a Sketch of Korea</em></a>. Ticknor and Company, 1886.</p>
 
-								<p>---. <a href="https://collections.mfa.org/advancedsearch/Objects/peopleSearch%3APercival%20Lowell/images?page=1">“Advanced Search Objects: results”</a>. MFA Boston. <em>Note: This archive presented through these search results includes additional photographs not published in Lowell’s travel narrative.</em></p>
+								<p>---. “<a href="https://collections.mfa.org/advancedsearch/Objects/peopleSearch%3APercival%20Lowell/images?page=1">Advanced Search Objects: results</a>.” MFA Boston. <em>Note: This archive presented through these search results includes additional photographs not published in Lowell’s travel narrative.</em></p>
 
 								<p>Stoddart, Anna M. <a href="https://archive.org/details/lifeofisabellabi00stoduoft/"><em>The Life of Isabella Bird (Mrs. Bishop)</em></a>. John Murray, 1906. <em>Note: The image of Bishop as photographer is opposite page 298.</em></p>
 							</section>
