--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -449,7 +449,7 @@
 							<hr/>
 							
 							<section aria-labelledby="okakura">
-								<h5 class="alternate" id="okakura">Okakura Kakuzo, <em>Deals of the East</em> (1903) and <em>The Awakening of Japan</em> (1904)</h5>
+								<h5 class="alternate" id="okakura">Okakura Kakuzo, <em>Ideals of the East</em> (1903) and <em>The Awakening of Japan</em> (1904)</h5>
 							
 								<section aria-labelledby="primary-7">
 									<h6 id="primary-7">Primary Sources</h6>
