--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -123,6 +123,8 @@
 						<p><a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650</a></p>
 
 						<iframe src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1xuY4upIooEeszZ_lCmeNx24eSFWe0rHe9ZdqH2xqVNk&font=Default&lang=en&initial_zoom=1&height=100%" width="100%" frameborder="0"></iframe>
+
+						<p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial connections to the Anglophone world, we have built a timeline (click here) that includes some major historical events from the fifteenth to the twentieth century. Each lesson plan also provides historical context and resources that may be useful for instructors who are looking to integrate these materials.</p>
 					</section> -->
 
 					<section aria-labelledby="naming-conventions">
@@ -136,7 +138,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. “<a href="https://www.bc.edu/content/bc-web/centers/Ricci-Institute/online-exhibits/archives/korean-cheonhado-map.html">Korean Cheonhado Map</a>.” Seventeenth-eighteeenth century. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College.</p>
+						<p>Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
