--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Transimperial Networks and East Asia: Timeline | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content=""/>
+		<meta name="description" content="Lists some major historical events important to the transimperial connections between East Asia and the Anglophone world."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -51,8 +51,8 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="lesson-plan">Transimperial Networks and East Asia: Timeline</h2>
-						<img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+						<h2 id="lesson-plan">Transimperial Networks and East Asia: Timeline</h2>
+						<img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Kim Sahyung, et al. Kangnido. 1402, https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg. Wikimedia Commons, Dschingis Khan und seine Erben (exhibition catalogue), München 2005, p. 336/7. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -201,7 +201,7 @@
 					<section aria-labelledby="timeline">
 						<h3 id="timeline">Timeline</h3>
 
-            <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial connections to the Anglophone world, we have built a timeline that includes some major historical events from the fifteenth to the twentieth century. Each lesson plan also provides historical context and resources that may be useful for instructors who are looking to integrate these materials.</p>
+            <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial connections to the Anglophone world, the creators of the “<a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>” lesson plan cluster built this timeline which includes some major historical events from the fifteenth to the twentieth century. This timeline comes out of our many discussions about the methodological issues that arise when the field of Victorian Studies seeks to expand its traditional geographical scope. As we quickly realized in the process of creating our cluster, the usual boundaries of the long nineteenth century (the French Revolution to World War I) are too limited and Eurocentric for the transimperial connections our lesson plans examine. Thus, we offer this timeline both to orient instructors and students and to illustrate how centering East Asia calls into question our field’s most basic assumptions. For more historical context and resources, please peruse each <a href="/html/lesson_plans/east_asia_transimperial_introduction.html#lps">lesson plan</a>.</p>
 
             <!-- Adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ -->
             <!-- Also see https://onaircode.com/html-css-vertical-timeline-examples/ -->
@@ -212,7 +212,7 @@
                   <div class="timeline-content">
                     <h3>1402</h3>
                     <!-- <span>Some work experience</span> -->
-                    <p>The Korean world map, the Kangnido, is completed</p>
+                    <p>The Korean world map, the <em>Kangnido</em>, is completed</p>
                   </div>
               </div>
             
@@ -275,7 +275,8 @@
               <div class="timeline-content">
                   <h3>1792–94</h3>
                   <!-- <span>Some work experience</span> -->
-                  <p>George Macartney Mission to China</p>
+                  <p>George Macartney’s mission to China</p>
+                  <p>Failed attempt by the British to extend trade in and diplomatic relations with China</p>
               </div>
             </div>
 
@@ -346,7 +347,7 @@
               <div class="timeline-content">
                 <h3>1856–60</h3>
                 <!-- <span>Some work experience</span> -->
-                <p>Second Opium War.</p>
+                <p>Second Opium War</p>
               </div>
             </div>
 
@@ -482,7 +483,7 @@
               <div class="timeline-content">
                   <h3>17 November 1905</h3>
                   <!-- <span>Some work experience</span> -->
-                  <p>Korea becomes a Protectorate of Japan</p>
+                  <p>Korea becomes a protectorate of Japan</p>
               </div>
             </div>
 
@@ -651,12 +652,13 @@
             </div>
             </div> 
 
-            <p>See a different, <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">non-accessible rendering</a> of this timeline as provided by Knightlab.</p>
+            <p>Users interested in seeing a horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
           </section>
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+            <p>Kim Sahyung, et al. <a href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336/7. </p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
