--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -64,7 +64,7 @@
 
 							<p><strong>Lesson Plan Developers:</strong>  Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
 
-							<div>
+							<div id="lps">
 								<strong>Lesson Plan Pages:</strong> 
 								<ol>
 									<li><a href="/html/lesson_plans/east_asia_psychoactive_revolution.html">Psychoactive Revolution and Transnational Networks</a></li>
@@ -116,16 +116,6 @@
 
 						<p>Lowe, Lisa. The Intimacies of Four Continents. Duke University Press, 2015.</p>
 					</section>
-
-					<!-- <section aria-labelledby="timeline">
-						<h3 id="timeline">Timeline</h3>
-
-						<p><a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650</a></p>
-
-						<iframe src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1xuY4upIooEeszZ_lCmeNx24eSFWe0rHe9ZdqH2xqVNk&font=Default&lang=en&initial_zoom=1&height=100%" width="100%" frameborder="0"></iframe>
-
-						<p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial connections to the Anglophone world, we have built a timeline (click here) that includes some major historical events from the fifteenth to the twentieth century. Each lesson plan also provides historical context and resources that may be useful for instructors who are looking to integrate these materials.</p>
-					</section> -->
 
 					<section aria-labelledby="naming-conventions">
 						<h3 id="naming-conventions">Naming Conventions in the Lesson Plans</h3>
