--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Transimperial Networks and East Asia: Timeline</h2>
-						<img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Kim Sahyung, et al. Kangnido. 1402, https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg. Wikimedia Commons, Dschingis Khan und seine Erben (exhibition catalogue), München 2005, p. 336/7. Public domain."/>
+						<img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Kim Sahyung, et al. Kangnido. 1402, https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg. Wikimedia Commons, Dschingis Khan und seine Erben (exhibition catalogue), München 2005, p. 336–37. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -110,7 +110,7 @@
             }
 
             .timeline-block {
-              margin: .25rem 0;
+              margin: 1rem 0;
               width: -webkit-calc(50% + 8px);
               width: -moz-calc(50% + 8px);
               width: calc(50% + 8px);
@@ -122,6 +122,7 @@
               -webkit-justify-content: space-between;
               -moz-box-pack: justify;
               justify-content: space-between;
+              align-items: center;
               clear: both;
             }
 
@@ -140,24 +141,40 @@
               height: 16px;
               border-radius: 50%;
               border: 2px solid #F5F7FA;
-              background: #4FC1E9;
+              /* background: #4FC1E9; */
               margin-top: 10px;
               z-index: 19;
             }
 
+            .timeline-block-right .marker{
+              background: #47535f;
+            }
+
+            .timeline-block-left .marker{
+              background: #A62C1C;
+            }
+
             .timeline-content {
-              width: 95%;
-              padding: 0 15px;
-              color: #666
+              /* width: 95%; */
+              padding: .5rem 1rem;
+              /* color: #666; */
+              background: #e6e6e6;
+              margin: 0 1rem;
             }
 
             .timeline-content h3 {
-              margin-top: 5px;
-              margin-bottom: 5px;
               font-size: 25px;
               font-weight: 500;
               text-align: inherit;
               direction: ltr;
+            }
+
+            .timeline-block-right h3{
+              color: #47535f;
+            }
+
+            .timeline-block-left h3{
+              color: #A62C1C;
             }
 
             .timeline-content span {
@@ -173,7 +190,7 @@
               word-spacing: 1px;
               /* color: #888; */
               text-align: inherit;
-              margin-top: .5rem;
+              margin: .5rem 0 0 0;
             }
 
 
@@ -652,13 +669,13 @@
             </div>
             </div> 
 
-            <p>Users interested in seeing a horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
+            <p><em>Note:</em> Users interested in seeing an animated, horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
           </section>
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-            <p>Kim Sahyung, et al. <a href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336/7. </p>
+            <p>Kim Sahyung, et al. <a href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336–37. </p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
