--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -58,179 +58,128 @@
 
           <style>
 
-            /* * {
-              -webkit-box-sizing: border-box;
-              -moz-box-sizing: border-box;
-              box-sizing: border-box;
-              outline: none;
+            .timeline-container *{
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+                outline: none;
             }
-
-            body {
-              margin: 0;
-              padding: 30px 0;
-              font-family: 'Roboto', sans-serif;
-              background: #F1F2F6;
-            }
-
-            h1 {
-              text-align: center;
-              font-weight: 300;
-              color: #777
-            }
-
-            h1 span {
-              font-weight: 600;
-            } */
-
-            .timeline-container  * {
-              -webkit-box-sizing: border-box;
-              -moz-box-sizing: border-box;
-              box-sizing: border-box;
-              outline: none;
-            }
-
-            .timeline-container {
-              /* width: 80%; */
-              padding: 50px 0;
-              margin: 50px auto;
+            .timeline-container{
+              margin: 3rem auto;  
+              padding: 3rem 0;
               position: relative;
               overflow: hidden;
             }
-
-            .timeline-container:before {
-              content: '';
-              position: absolute;
-              top: 0;
-              left: 50%;
-              margin-left: -1px;
-              width: 2px;
-              height: 100%;
-              background: #CCD1D9;
-              z-index: 1
+            .timeline-container:before{
+                content: '';
+                background: #CCD1D9;
+                margin-left: -1px;
+                width: 2px;
+                height: 100%;
+                top: 0;
+                left: 50%;
+                position: absolute;
+                z-index: 1;
             }
-
-            .timeline-block {
-              margin: 1rem 0;
-              width: -webkit-calc(50% + 8px);
-              width: -moz-calc(50% + 8px);
-              width: calc(50% + 8px);
-              display: -webkit-box;
-              display: -webkit-flex;
-              display: -moz-box;
-              display: flex;
-              -webkit-box-pack: justify;
-              -webkit-justify-content: space-between;
-              -moz-box-pack: justify;
-              justify-content: flex-start;
-              align-items: center;
-              clear: both;
+            .timeline-block{
+                margin: 1rem 0;
+                width: -webkit-calc(50% + 8px);
+                width: -moz-calc(50% + 8px);
+                width: calc(50% + 8px);
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: -moz-box;
+                display: flex;
+                -webkit-box-pack: justify;
+                -webkit-justify-content: flex-start;
+                -moz-box-pack: justify;
+                justify-content: flex-start;
+                align-items: center;
+                clear: both;
             }
-
             .timeline-block:first-of-type{
-              margin-top: -1rem;
+                margin-top: -1rem;
             }
-
             .timeline-block:last-of-type{
-              margin-bottom: -1rem;
+                margin-bottom: -1rem;
             }
-
-            .timeline-block-right {
-              float: right;
+            .timeline-block-right{
+                float: right;
             }
-
-            .timeline-block-left {
-              float: left;
-              direction: rtl;
-              text-align: right;
+            .timeline-block-left{
+                float: left;
+                direction: rtl;
+                text-align: right;
             }
-
-            .marker {
-              width: 16px;
-              height: 16px;
-              border-radius: 50%;
-              border: 2px solid #F5F7FA;
-              /* background: #4FC1E9; */
-              margin-top: 10px;
-              z-index: 19;
+            .marker{
+                width: 16px !important;
+                height: 16px;
+                border-radius: 50%;
+                border: 2px solid #F5F7FA;
+                z-index: 19;
             }
-
             .timeline-block-right .marker{
-              background: #404A54;
+                background: #404A54;
             }
-
             .timeline-block-left .marker{
-              background: #8C2518;
+                background: #8C2518;
             }
-
-            .timeline-content {
-              /* width: 100%; */
-              padding: .5rem 1rem 1rem;
-              /* color: #666; */
-              background: #e6e6e6;
-              margin: 0 1rem;
+            .timeline-content{
+                padding: 0.5rem 1rem 1rem;
+                background: #e6e6e6;
+                margin: 0 1rem;
             }
-
             .timeline-block-right .timeline-content{
-              border-radius: .5rem 0 .5rem 0;
-              padding-left: 1.5rem;
+                border-radius: 0.5rem 0 0.5rem 0;
+                padding-left: 1.5rem;
             }
-            
             .timeline-block-left .timeline-content{
-              border-radius: 0 .5rem 0 .5rem;
-              padding-right: 1.5rem;
+                border-radius: 0 0.5rem 0 0.5rem;
+                padding-right: 1.5rem;
             }
-
-            .timeline-content h3 {
-              font-size: 25px;
-              font-weight: 500;
-              text-align: inherit;
-              direction: ltr;
+            .timeline-content h3{
+                font-size: 25px;
+                font-weight: 500;
+                text-align: inherit;
+                direction: ltr;
             }
-
             .timeline-block-right h3{
-              color: #404A54;
+                color: #404A54;
             }
-
             .timeline-block-left h3{
-              color: #8C2518;
+                color: #8C2518;
             }
-
-            .timeline-content span {
-              font-size: 15px;
-              color: #a4a4a4;
-              display: none;
-              visibility: hidden;
+            .timeline-content span{
+                font-size: 15px;
+                color: #a4a4a4;
+                display: none;
+                visibility: hidden;
             }
-
-            .timeline-content p {
-              font-size: .9rem;
-              line-height: 1.5em;
-              word-spacing: 1px;
-              /* color: #888; */
-              text-align: inherit;
-              margin: .5rem 0 0 0;
+            .timeline-content p{
+                font-size: 0.9rem;
+                line-height: 1.5em;
+                word-spacing: 1px;
+                text-align: inherit;
+                margin: 0.5rem 0 0;
             }
-
-
-            @media screen and (max-width: 768px) {
-              .timeline-container:before {
-                  left: 8px;
-                  width: 2px;
-              }
-              .timeline-block {
-                  width: 100%;
-                  margin-bottom: 30px;
-              }
-              .timeline-block-right {
-                  float: none;
-              }
-
-              .timeline-block-left {
-                  float: none;
-                  direction: ltr;
-                  text-align: left;
-              }
-            }      
+            @media screen and (max-width: 768px){
+                .timeline-container:before{
+                    left: 8px;
+                    width: 2px;
+                }
+                .timeline-block{
+                    width: 100%;
+                    margin-bottom: 30px;
+                }
+                .timeline-block-right{
+                    float: none;
+                }
+                .timeline-block-left{
+                    float: none;
+                    direction: ltr;
+                    text-align: left;
+                }
+            }
           </style>
 
 					<section aria-labelledby="timeline">
