--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -58,134 +58,137 @@
 
           <style>
 
-            .timeline-container *{
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                box-sizing: border-box;
-                outline: none;
-            }
-            .timeline-container{
-              margin: 3rem auto;  
-              padding: 3rem 0;
-              position: relative;
-              overflow: hidden;
-            }
-            .timeline-container:before{
-                content: '';
-                background: #CCD1D9;
-                margin-left: -1px;
-                width: 2px;
-                height: 100%;
-                top: 0;
-                left: 50%;
-                position: absolute;
-                z-index: 1;
-            }
-            @media screen and (max-width: 768px){
-                .timeline-container:before{
-                  width: 2px;  
-                  left: 8px;
-                }
-              }
-            .timeline-block{
-                margin: 1rem 0;
-                width: -webkit-calc(50% + 8px);
-                width: -moz-calc(50% + 8px);
-                width: calc(50% + 8px);
-                display: -webkit-box;
-                display: -webkit-flex;
-                display: -moz-box;
-                display: flex;
-                -webkit-box-pack: justify;
-                -webkit-justify-content: flex-start;
-                -moz-box-pack: justify;
-                justify-content: flex-start;
-                align-items: center;
-                clear: both;
-            }
-            @media screen and (max-width: 768px){
-                .timeline-block{
-                  margin-bottom: 30px;
-                    width: 100%;
-                }
-              }
-            .timeline-block:first-of-type{
-                margin-top: -1rem;
-            }
-            .timeline-block:last-of-type{
-                margin-bottom: -1rem;
-            }
-            .timeline-block-right{
-                float: right;
-            }
-            @media screen and (max-width: 768px){
-                .timeline-block-right{
-                    float: none;
-                }
-              }
-            .timeline-block-left{
-              direction: rtl;
-              text-align: right;  
-              float: left;
-            }
-            @media screen and (max-width: 768px){
-                .timeline-block-left{
-                    float: none;
-                    direction: ltr;
-                    text-align: left;
-                }
-            }
-            .marker{
-              border-radius: 50%;
-                border: 2px solid #F5F7FA;
-                width: 16px;
-                height: 16px;
-                z-index: 19;
-            }
-            .timeline-block-right .marker{
-                background: #404A54;
-            }
-            .timeline-block-left .marker{
-                background: #8C2518;
-            }
-            .timeline-content{
-              background: #e6e6e6;
-              padding: 0.5rem 1rem 1rem;
-              width: 95%;
-            }
-            .timeline-block-right .timeline-content{
-                border-radius: 0.5rem 0 0.5rem 0;
-                padding-left: 1.5rem;
-            }
-            .timeline-block-left .timeline-content{
-                border-radius: 0 0.5rem 0 0.5rem;
-                padding-right: 1.5rem;
-            }
-            .timeline-content h3{
-                font-size: 25px;
-                font-weight: 500;
-                text-align: inherit;
-                direction: ltr;
-            }
-            .timeline-block-right h3{
-                color: #404A54;
-            }
-            .timeline-block-left h3{
-                color: #8C2518;
-            }
-            .timeline-content span{
-                font-size: 15px;
-                color: #a4a4a4;
-                display: none;
-                visibility: hidden;
-            }
-            .timeline-content p{
-                font-size: 0.9rem;
-                word-spacing: 1px;
-                text-align: inherit;
-                line-height: 1.5em;
-                margin: 0.5rem 0 0;
-            }
+/* box sizing */
+.timeline-container * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none;
+}
+/* main container */
+.timeline-container {
+  margin: 3rem auto;
+  padding: 3rem 0;
+  position: relative;
+  overflow: hidden;
+}
+/* vertical line for timeline */
+.timeline-container:before {
+  content: '';
+  background: #CCD1D9;
+  margin-left: -1px;
+  width: 2px;
+  height: 100%;
+  top: 0;
+  left: 8px;  
+  position: absolute;
+  z-index: 1;
+}
+@media only screen and (min-width: 768px){
+  .timeline-container:before {
+    width: 2px;
+    left: 50%;
+  }
+}
+/* individual timeline item */
+.timeline-block {
+  margin: 1rem 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: flex-start;
+  -moz-box-pack: justify;
+  justify-content: flex-start;
+  align-items: center;
+  clear: both;
+}
+@media only screen and (min-width: 768px){
+  .timeline-block {
+    width: -webkit-calc(50% + 8px);
+    width: -moz-calc(50% + 8px);
+    width: calc(50% + 8px);
+  }
+}
+.timeline-block:first-of-type {
+  margin-top: -1rem;
+}
+.timeline-block:last-of-type {
+  margin-bottom: -1rem;
+}
+.timeline-block-right {
+  float: right;
+}
+@media screen and (max-width: 768px) {
+  .timeline-block-right {
+      float: none;
+  }
+}
+.timeline-block-left {
+  direction: rtl;
+  text-align: right;
+  float: left;
+}
+@media screen and (max-width: 768px) {
+  .timeline-block-left {
+      float: none;
+      direction: ltr;
+      text-align: left;
+  }
+}
+.marker {
+  border-radius: 50%;
+  border: 2px solid #F5F7FA;
+  width: 16px;
+  height: 16px;
+  z-index: 19;
+}
+.timeline-block-right .marker {
+  background: #404A54;
+}
+.timeline-block-left .marker {
+  background: #8C2518;
+}
+.timeline-content {
+  background: #e6e6e6;
+  padding: 0.5rem 1rem 1rem;
+  width: 95%;
+}
+.timeline-block-right .timeline-content {
+  border-radius: 0.5rem 0 0.5rem 0;
+  padding-left: 1.5rem;
+}
+.timeline-block-left .timeline-content {
+  border-radius: 0 0.5rem 0 0.5rem;
+  padding-right: 1.5rem;
+}
+.timeline-content h3 {
+  font-size: 25px;
+  font-weight: 500;
+  text-align: inherit;
+  direction: ltr;
+}
+.timeline-block-right h3 {
+  color: #404A54;
+}
+.timeline-block-left h3 {
+  color: #8C2518;
+}
+.timeline-content span {
+  font-size: 15px;
+  color: #a4a4a4;
+  display: none;
+  visibility: hidden;
+}
+.timeline-content p {
+  font-size: 0.9rem;
+  word-spacing: 1px;
+  text-align: inherit;
+  line-height: 1.5em;
+  margin: 0.5rem 0 0;
+}
           </style>
 
 					<section aria-labelledby="timeline">
