--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -72,6 +72,7 @@
 						<li><a href="/html/lesson_plans/east_asia_visualizing_korea.html">Visualizing Korea</a></li>
 						<li><a href="/html/lesson_plans/east_asia_chinese_migration.html">Chinese Migration and Forms of Global Circulation</a></li>
 						<li><a href="/html/lesson_plans/east_asia_victorian_realism.html">Victorian Realism, China, and the Politics of Form</a></li>
+						<li><a href="/html/lesson_plans/east_asia_timeline.html">Transimperial Networks and East Asia: Timeline</a></li>
 					</ul>
 				</section>
 
