--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -628,7 +628,7 @@
               </div>
             </div> 
 
-            <p><em>Note:</em> Users interested in seeing an animated, horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
+            <p>Users interested in seeing an animated, horizontally-oriented version of our timeline may wish to consult the <a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1EQbjfG1oay5hhNDpo34g43IzneoeEoPQKClOn_yGkxU&font=Default&lang=en&initial_zoom=2&height=650">version</a> we created through Knightlab's <em>TimelineJS</em>. However, users should also note that the Knightlab timeline is on an external site and is not coded for visual accessibility.</p>
           </section>
 
 					<section aria-labelledby="caption">
