--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -177,22 +177,20 @@
 /* container for timeline item date and text */
 .timeline-content {
   background: #e6e6e6;
+  margin-left: .75rem;
   padding: .5rem 1rem 1rem;
   width: 95%;
+  /* display: inline-block; */
 }
 .timeline-block-right .timeline-content {
   -webkit-border-radius: .5rem 0 .5rem 0;
 	-moz-border-radius: .5rem 0 .5rem 0;
   border-radius: .5rem 0 .5rem 0;
-  margin-left: .75rem;
-  padding-left: 1.5rem;
 }
 .timeline-block-left .timeline-content {
   -webkit-border-radius: 0 .5rem 0 .5rem;
 	-moz-border-radius: 0 .5rem 0 .5rem;
   border-radius: 0 .5rem 0 .5rem;
-  margin-left: .75rem;
-  padding-right: 1.5rem;
 }
 @media only screen and (min-width: 768px){
   .timeline-block-left .timeline-content {
