--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -186,18 +186,16 @@ section section .timeline-block-left{
     max-width: max-content;
   }
 }
-.timeline-block-right .timeline-content{
+.timeline-content{
   -webkit-border-radius: .5rem 0 .5rem 0;
 	-moz-border-radius: .5rem 0 .5rem 0;
   border-radius: .5rem 0 .5rem 0;
 }
-.timeline-block-left .timeline-content{
-  -webkit-border-radius: 0 .5rem 0 .5rem;
-	-moz-border-radius: 0 .5rem 0 .5rem;
-  border-radius: 0 .5rem 0 .5rem;
-}
 @media only screen and (min-width: 768px){
   .timeline-block-left .timeline-content{
+    -webkit-border-radius: 0 .5rem 0 .5rem;
+    -moz-border-radius: 0 .5rem 0 .5rem;
+    border-radius: 0 .5rem 0 .5rem;
     margin-right: .75rem;
   }
 }
