--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -56,6 +56,16 @@
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
+          <section class="cluster-details specs" aria-labelledby="details">
+						<h3 id="details">Production Details</h3>
+
+						<div class="specs-container">
+							<p><strong>Timeline Creators:</strong>  Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
+
+              <p><strong>Publication Date:</strong> 2022</p>
+						</div>
+					</section>
+
           <style>
 
 /* box sizing */
