--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -60,7 +60,7 @@
 						<h3 id="details">Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Timeline Creators:</strong>  Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
+							<p><strong>Timeline Creators:</strong>  Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki (tech. dev.), Rae X. Yan</p>
 
               <p><strong>Publication Date:</strong> 2022</p>
 						</div>
@@ -651,7 +651,7 @@ section section .timeline-block-left h4{
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, and Rae X. Yan. “Transimperial Networks and East Asia: Timeline”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_transimperial_timeline.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_transimperial_timeline.html</a>.</p>
+						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki, and Rae X. Yan. “Transimperial Networks and East Asia: Timeline”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_transimperial_timeline.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_transimperial_timeline.html</a>.</p>
 					</section>
 			</main>
 			
