--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -245,7 +245,7 @@ section section .timeline-block-left h4{
 					<section aria-labelledby="timeline">
 						<h3 id="timeline">Timeline</h3>
 
-            <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial exchanges with the Anglophone world, the creators of the “<a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>” lesson plan cluster built this timeline which includes some major historical events from the fifteenth to the twentieth century. This timeline comes out of our many discussions about the methodological issues that arise when the field of Victorian Studies seeks to expand its traditional geographical scope. As we quickly realized in the process of creating our cluster, the usual boundaries of the long nineteenth century (the French Revolution to World War I) are too limited and Eurocentric for the transimperial connections our lesson plans examine. Thus, we offer this timeline both to orient instructors and students and to illustrate how centering East Asia calls into question our field’s most basic assumptions. For more historical context and resources, please peruse each <a href="/html/lesson_plans/east_asia_transimperial_introduction.html#lps">lesson plan</a>.</p>
+            <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial exchanges with the Anglophone world, the creators of the “<a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>” lesson plan cluster built this timeline, which includes some major historical events from the fifteenth to the twentieth century. This timeline comes out of our many discussions about the methodological issues that arise when the field of Victorian Studies seeks to expand its traditional geographical scope. As we quickly realized in the process of creating our cluster, the usual boundaries of the long nineteenth century (the French Revolution to World War I) are too limited and Eurocentric for the transimperial connections our lesson plans examine. Thus, we offer this timeline both to orient instructors and students and to illustrate how centering East Asia calls into question our field’s most basic assumptions. For more historical context and resources, please peruse each <a href="/html/lesson_plans/east_asia_transimperial_introduction.html#lps">lesson plan</a>.</p>
 
             <p><em>Note for users with visual impairments:</em> The Timeline below presents items along a vertical axis, with events being given in a descending, alternating right-left fashion (desktop) or one below another (mobile).</p>
 
@@ -315,8 +315,7 @@ section section .timeline-block-left h4{
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1792">1792–94</h4>
-                    <p>George Macartney’s mission to China</p>
-                    <p>Failed attempt by the British to extend trade in and diplomatic relations with China</p>
+                    <p>George Macartney’s failed mission to China to extend trade and diplomatic relations between Britain and China</p>
                 </span>
               </section>
 
@@ -420,8 +419,7 @@ section section .timeline-block-left h4{
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1876">26 February 1876</h4>
-                    <p>Korea and Japan sign the Treaty of Kanghwa</p>
-                    <p>Opening of Busan, Incheon, and Wonsan in Korea</p>
+                    <p>Korea and Japan sign the Treaty of Kanghwa, resulting in the opening of Busan, Incheon, and Wonsan in Korea</p>
                 </span>
               </section>
 
@@ -581,8 +579,7 @@ section section .timeline-block-left h4{
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1931">18 September 1931</h4>
-                    <p>Manchurian Incident</p>
-                    <p>Japanese occupation of Manchuria</p>
+                    <p>Manchurian Incident, which led to the Japanese occupation of Manchuria</p>
                 </span>
               </section>
 
@@ -630,8 +627,7 @@ section section .timeline-block-left h4{
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1942">15 February 1942</h4>
-                    <p>British forces surrender to Japan in Singapore</p>
-                    <p>Beginning of the Japanese Occupation in Southeast Asia</p>
+                    <p>British forces surrender to Japan in Singapore, leading to Japanese occupation in Southeast Asia</p>
                 </span>
               </section>
 
