--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -75,6 +75,8 @@
 								</ol>
 							</div>
 
+							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a>
+
               <p><strong>Publication Date:</strong> 2022</p>
 						</div>
 					</section>
@@ -115,12 +117,6 @@
 						<p>Chatterjee, Ronjaunee, et al. “<a href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
 
 						<p>Lowe, Lisa. The Intimacies of Four Continents. Duke University Press, 2015.</p>
-					</section>
-
-					<section aria-labelledby="timeline">
-						<h3 id="timeline">Timeline</h3>
-
-						<p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial exchanges with the Anglophone world, we built a <a href="/html/lesson_plans/east_asia_timeline.html">timeline</a>, which includes some major historical events from the fifteenth to the twentieth century. For more historical context and resources, please peruse <a href="#lps">each lesson plan</a>.</p>
 					</section>
 
 					<section aria-labelledby="naming-conventions">
