--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -68,6 +68,8 @@
 
 							<p><strong>Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
+							<p><strong>Cluster Timeline:</strong> <a href="/html/lesson_plans/east_asia_timeline.html">Webpage</a>
+
 							<p><strong>Publication Date:</strong> 2022</p>
 						</div>
 					</section>
