--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -63,6 +63,10 @@
 						<div class="specs-container">
 							<p><strong>Timeline Creators:</strong>  Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki (tech. dev.), Rae X. Yan</p>
 
+              <p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+
+              <p><strong>Lesson Plan Cluster Title:</strong> Transimperial Networks and East Asia</p>
+
               <p><strong>Publication Date:</strong> 2022</p>
 						</div>
 					</section>
