--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -76,13 +76,13 @@
 
             <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial exchanges with the Anglophone world, the creators of the “<a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>” lesson plan cluster built this timeline, which includes some major historical events from the fifteenth to the twentieth century. This timeline comes out of our many discussions about the methodological issues that arise when the field of Victorian Studies seeks to expand its traditional geographical scope. As we quickly realized in the process of creating our cluster, the usual boundaries of the long nineteenth century (the French Revolution to World War I) are too limited and Eurocentric for the transimperial connections our lesson plans examine. Thus, we offer this timeline both to orient instructors and students and to illustrate how centering East Asia calls into question our field’s most basic assumptions. For more historical context and resources, please peruse each <a href="/html/lesson_plans/east_asia_transimperial_introduction.html#lps">lesson plan</a>.</p>
 
-            <p><em>Note for users with visual impairments:</em> The Timeline below presents items along a vertical axis, with events being given in a descending, alternating right-left fashion (desktop) or one below another (mobile).</p>
+            <p><em>Note for users with visual impairments:</em> The timeline below presents items along a vertical axis, with events being given in a descending, alternating right-left fashion (desktop) or one below another (mobile).</p>
 
-            <p class="timeline-dates"><em>Centuries:</em> <a href="#1402">1400s</a> <a href="#1594">1500s</a> <a href="#1600">1600s</a> <a href="#1773">1700s</a> <a href="#1839">1800s</a> <a href="#1900">1900s</a>
+            <p class="timeline-dates"><em>Centuries:</em> <a href="#timeline-container">1400s</a> <a href="#1594">1500s</a> <a href="#1600">1600s</a> <a href="#1773">1700s</a> <a href="#1839">1800s</a> <a href="#1900">1900s</a>
 
             <!-- Adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ -->
             <!-- Also see https://onaircode.com/html-css-vertical-timeline-examples/ -->
-            <section class="timeline-container">
+            <section id="timeline-container" class="timeline-container">
 
               <section class="timeline-block timeline-block-right" aria-labelledby="1402">
                 <span class="marker"></span>
@@ -456,7 +456,7 @@
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1942">15 February 1942</h4>
-                    <p>British forces surrender to Japan in Singapore, leading to Japanese occupation in Southeast Asia</p>
+                    <p>British forces surrender to Japan in Singapore, leading to Japanese occupation of Southeast Asia</p>
                 </span>
               </section>
 
@@ -488,7 +488,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki, and Rae X. Yan. “Transimperial Networks and East Asia: Timeline”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_transimperial_timeline.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_transimperial_timeline.html</a>.</p>
+						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki, and Rae X. Yan. “Transimperial Networks and East Asia: Timeline”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href=" https://undiscipliningvc.org/html/lesson_plans/east_asia_timeline.html" class="cite-link"> https://undiscipliningvc.org/html/lesson_plans/east_asia_timeline.html</a>.</p>
 					</section>
 			</main>
 			
