--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -456,7 +456,7 @@
                 <span class="marker"></span>
                 <span class="timeline-content">
                     <h4 id="1942">15 February 1942</h4>
-                    <p>British forces surrender to Japan in Singapore, leading to Japanese occupation of Southeast Asia</p>
+                    <p>British forces surrender to Japan in Singapore, leading to the Japanese occupation of Southeast Asia</p>
                 </span>
               </section>
 
