u east_asia_timeline

--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -78,7 +78,7 @@
 
             <p><em>Note for users with visual impairments:</em> The timeline below presents items along a vertical axis, with events being given in a descending, alternating right-left fashion (desktop) or one below another (mobile).</p>
 
-            <p class="timeline-dates"><em>Centuries:</em> <a href="#timeline-container">1400s</a> <a href="#1594">1500s</a> <a href="#1600">1600s</a> <a href="#1773">1700s</a> <a href="#1839">1800s</a> <a href="#1900">1900s</a>
+            <p class="timeline-dates"><em>Centuries:</em> <a href="#timeline-container">1400s</a> <a href="#1594">1500s</a> <a href="#1600">1600s</a> <a href="#1773">1700s</a> <a href="#1839">1800s</a> <a href="#1900">1900s</a></p>
 
             <!-- Adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ -->
             <!-- Also see https://onaircode.com/html-css-vertical-timeline-examples/ -->
